# mit-chatbot-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: admin_service.py  bot_service.py  config.py  constants.py  database.py  entities.py  logging_config.py  main.py  models.py  router.py
